--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,5 +13,10 @@ main {
     width: 500px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgb(51, 34, 34);
+    box-shadow: 3px 3px 5px rgb(168, 21, 191);
+}
+
+img.lado {
+    float: right
+
 }
